<?xml version="1.0" encoding="utf-8"?>
<com.automobile.service.comman.SlidingLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_login_llContainer"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <com.automobile.service.customecomponent.CustomTextView
                android:id="@+id/textView"
                style="@style/tvLoginTitle"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_10sdp"
                android:paddingBottom="@dimen/_5sdp"
                android:text="@string/signin"
                app:font_name="GothamHTF-Bold.otf" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:orientation="vertical">


                <ImageView
                    android:layout_width="@dimen/_100sdp"
                    android:layout_height="@dimen/_100sdp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="@dimen/_25sdp"
                    android:background="@drawable/rounded_rectangle_shape_et"
                    android:padding="@dimen/_10sdp"
                    android:src="@drawable/ic_shopping_cart_white_32dp" />


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    app:theme="@style/TextLabelIn">

                    <com.automobile.service.customecomponent.CustomEdittext
                        android:id="@+id/activity_login_etEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        />

                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    app:theme="@style/TextLabelIn">

                    <com.automobile.service.customecomponent.CustomEdittext
                        android:id="@+id/activity_login_etPsw"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        app:font_name="GothamHTF-Book.otf" />
                </android.support.design.widget.TextInputLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_25sdp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <com.automobile.service.customecomponent.CustomButton
                        android:id="@+id/activity_login_btnDone"
                        style="@style/EditTextStyle.login_btn"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_45sdp"
                        android:text="@string/btn_signin"
                        android:textAllCaps="false"
                        app:font_name="GothamHTF-Bold.otf" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <com.automobile.service.customecomponent.CustomTextView
                        android:id="@+id/activity_login_tvForgotPsw"
                        style="@style/tvForgotTitle"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:padding="@dimen/_5sdp"
                        android:text="@string/forgot_your_details" />


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="bottom|center_horizontal"
                        android:gravity="bottom|center_horizontal">

                        <com.automobile.service.customecomponent.CustomTextView
                            android:id="@+id/activity_login_tvReg"
                            style="@style/tvLoginTitle"
                            android:layout_marginTop="@dimen/_10sdp"
                            android:paddingBottom="@dimen/_5sdp"
                            android:text="@string/create_new_account"
                            app:font_name="GothamHTF-Book.otf" />

                    </LinearLayout>


                </LinearLayout>


            </LinearLayout>


        </LinearLayout>
    </ScrollView>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/_5sdp"
        android:background="@color/row_view" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:layout_gravity="center_vertical"
        android:gravity="center"
        android:orientation="horizontal">

        <com.automobile.service.customecomponent.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/_15sdp"
            android:paddingTop="@dimen/_5sdp"
            android:text="@string/or_connect_with_social"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_16sdp"
            app:font_name="GothamHTF-Book.otf" />

        <ImageView
            android:id="@+id/activity_login_ivFacebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/_10sdp"
            android:src="@drawable/icon_facbook" />


    </LinearLayout>


</com.automobile.service.comman.SlidingLinearLayout>