<?xml version="1.0" encoding="utf-8"?>
<com.automobile.service.comman.SlidingLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_register_llContainer"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/activity_register_ivClose"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:padding="@dimen/_10sdp"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:src="@drawable/ic_close" />

                <com.automobile.service.customecomponent.CustomTextView
                    style="@style/tvLoginTitle"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:text="@string/signup"
                    app:font_name="GothamHTF-Bold.otf"
                    />


            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_weight="1"
                android:orientation="vertical">


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_60sdp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    app:theme="@style/TextLabelIn">

                    <com.automobile.service.customecomponent.CustomEdittext
                        android:id="@+id/activity_register_etUsername"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/username"
                        android:inputType="textPersonName"
                        android:textColor="@color/color_black" />
                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    app:theme="@style/TextLabelIn">

                    <com.automobile.service.customecomponent.CustomEdittext
                        android:id="@+id/activity_register_etEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/color_black"
                        app:font_name="GothamHTF-Book.otf" />
                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    app:theme="@style/TextLabelIn">

                    <com.automobile.service.customecomponent.CustomEdittext
                        android:id="@+id/activity_register_etPsw"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        app:font_name="GothamHTF-Book.otf" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    app:theme="@style/TextLabelIn">

                    <com.automobile.service.customecomponent.CustomEdittext
                        android:id="@+id/activity_register_etPhone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/phone"
                        android:inputType="phone"
                        android:textColor="@color/color_black"

                        app:font_name="GothamHTF-Book.otf" />
                </android.support.design.widget.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_35sdp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <com.automobile.service.customecomponent.CustomButton
                        android:id="@+id/activity_register_btnDone"
                        style="@style/EditTextStyle.login_btn"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_45sdp"
                        android:text="@string/btn_signup"
                        android:textAllCaps="false"
                        app:font_name="GothamHTF-Bold.otf" />

                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <com.automobile.service.customecomponent.CustomTextView
                        android:id="@+id/activity_register_tvReg"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/tvForgotTitle"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:padding="@dimen/_5sdp"
                        android:text="@string/already_have_account">

                    </com.automobile.service.customecomponent.CustomTextView>
                </RelativeLayout>


            </LinearLayout>


        </LinearLayout>
    </ScrollView>


</com.automobile.service.comman.SlidingLinearLayout>