<?xml version="1.0" encoding="utf-8"?>
<com.automobile.service.comman.SlidingLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_forgot_llContainer"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/activity_forgot_ivClose"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:padding="@dimen/_10sdp"
                    android:src="@drawable/ic_close" />

                <com.automobile.service.customecomponent.CustomTextView
                    style="@style/tvLoginTitle"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:text="@string/forgot_psw"
                    />


            </RelativeLayout>


            <ImageView
                android:layout_width="@dimen/_120sdp"
                android:layout_height="@dimen/_120sdp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/rounded_rectangle_shape_et"
                android:padding="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_35sdp"
                android:src="@drawable/ic_shopping_cart_white_24dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_20sdp"
                android:orientation="vertical">


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_25sdp"
                    android:gravity="center_vertical"
                    app:theme="@style/TextLabelIn"
                    android:orientation="horizontal">

                    <com.automobile.service.customecomponent.CustomEdittext
                        android:id="@+id/activity_forgot_etEmailId"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Enter your email id"
                        android:inputType="textEmailAddress"
                        app:font_name="GothamHTF-Book.otf" />
                </android.support.design.widget.TextInputLayout>


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_20sdp"
                android:orientation="horizontal">

                <com.automobile.service.customecomponent.CustomButton
                    android:id="@+id/activity_forgot_btnDone"
                    style="@style/EditTextStyle.login_btn"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_45sdp"
                    android:text="@string/submit"
                    android:textAllCaps="true"
                    app:font_name="GothamHTF-Bold.otf" />

            </LinearLayout>

            <com.automobile.service.customecomponent.CustomTextView
                android:id="@+id/activity_forgot_tvSign"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:padding="@dimen/_5sdp"
                android:text="@string/signin"
                android:textColor="@color/forgot_link_color"
                android:textSize="@dimen/_14sdp"
                android:visibility="gone"
                app:font_name="GothamHTF-Medium.otf" />


        </LinearLayout>

    </ScrollView>


</com.automobile.service.comman.SlidingLinearLayout>